--- a/WebPage/Index.html
+++ b/WebPage/Index.html
@@ -768,7 +768,7 @@
           max = 10;
           switch (sel) {
             case "hour":
-              ticks = 30;
+              ticks = 15;
               points = 60;
               break;
             case "day":
@@ -804,30 +804,30 @@
         var plots = 0;
         var range = 0;
         var d_set = h_c;
-        do {  
-            var d = plots + h_c;
-            min = m_m_arr[0][d_set];
-           if((d === 0)||(d === 1)||(d === 3))   if(m_m_arr[0][d_set +1] < min) min = m_m_arr[0][d_set +1];
-           max = m_m_arr[1][plots];
-            if((d === 0)||(d === 1)||(d === 3))  if(m_m_arr[1][d_set +1] < max) max = m_m_arr[1][d_set +1];
-          
-            if (plots === 0) range = Math.ceil((Math.ceil(max) - Math.floor(min)) / 8) * 8;
-            range = Math.ceil((Math.ceil(max) - Math.floor(min)) / 4) * 4;
-            if (plots === 0) range = Math.ceil((Math.ceil(max) - Math.floor(min)) / 8) * 8;
-            draw_graph(plots, range, max, ticks, points);
-            temp = new Array();
-            temp = myarr[d_set ];
+        do {
+          min = m_m_arr[0][d_set];
+          if ((d_set === 0) || (d_set === 2) || (d_set === 5))
+            if (m_m_arr[0][d_set + 1] <= min) min = m_m_arr[0][d_set + 1];
+          max = m_m_arr[1][d_set];
+          if ((d_set === 0) || (d_set === 2) || (d_set === 5))
+            if (m_m_arr[1][d_set + 1] >= max) max = m_m_arr[1][d_set + 1];
+          max = Math.ceil(max);
+          min = Math.floor(min); 
+          range = Math.ceil((max - min) / 4) * 4;
+          if (plots === 0) range = Math.ceil((max - min) / 8) * 8;
+          draw_graph(plots, range, max, ticks, points);
+          temp = new Array();
+          temp = myarr[d_set];
+          fill_chart(0, plots, temp, range, max, points);
+          if ((d_set === 0) || (d_set === 2) || (d_set === 5)) {            
             d_set++;
-          if(d_set === 8)d_set = 0;
-            fill_chart(0, plots, temp, range, max, points);
-            if((d === 0)||(d === 1)||(d === 3)){
-                temp = new Array();
-              temp = myarr[d_set + 1];
-              fill_chart(1, plots, temp, range, max, points);
-              d_set++;
-          if(d_set === 8)d_set = 0;
-            }
-            plots++;          
+            temp = new Array();
+            temp = myarr[d_set];
+            fill_chart(1, plots, temp, range, max, points);
+          }
+          d_set++;
+          if (d_set === 8) d_set = 0;
+          plots++;
         } while (plots < 5);
       }
 
@@ -838,7 +838,7 @@
         var w = 360;
         var h = 130;
         if (c_num === 0) {
-          w = 740;
+          w = 760;
           h = 640;
         };
         if (col === 0) ctx.strokeStyle = "blue";
@@ -851,7 +851,6 @@
         var y1 = 0;
         var xs = w / p;
         y1 = y + (y_inc * (i - p_data[0]));
-
         ctx.lineWidth = 2;
         ctx.beginPath();
         ctx.moveTo(x, y1);
@@ -908,51 +907,53 @@
             var cell = 2;
             switch (sel) {
               case "hour":
-                 len = 59;
-                 do {
-                    myarr[0][index] = all_dat[cell]; //in temp
-                    myarr[1][index] = all_dat[cell + 18]; //out temp
-                    myarr[2][index] = all_dat[cell+3]; //out hum
-                    myarr[3][index] = all_dat[cell + 21]; //in hum
-                    myarr[4][index] = all_dat[cell + 24]; //pres
-                    myarr[5][index] = all_dat[cell + 6]; //wind
-                    myarr[6][index] = all_dat[cell + 9]; //gust
-                    myarr[7][index] = all_dat[cell + 15]; //rain
-                    index++;
-                    cell += 29;
-                  } while (index < len);
-                m_m_arr[0][0] = all_dat[2+(61*29)];//out temp
-                m_m_arr[1][0] = all_dat[3+(61*29)];
-                m_m_arr[0][1] = all_dat[20+(61*29)];//in temp
-                m_m_arr[1][1] = all_dat[21+(61*29)];
-                m_m_arr[0][2] = all_dat[5+(61*29)];//out hum
-                m_m_arr[1][2] = all_dat[6+(61*29)];
-                m_m_arr[0][3] = all_dat[23+(61*29)];//in hum
-                m_m_arr[1][3] = all_dat[24+(61*29)];
-                m_m_arr[0][4] = all_dat[26+(61*29)];//in pes
-                m_m_arr[1][4] = all_dat[27+(61*29)];
-                m_m_arr[0][5] = all_dat[8+(61*29)];// wind
-                m_m_arr[1][5] = all_dat[12+(61*29)];
-                m_m_arr[0][6] = 0;                 //rain
-                m_m_arr[1][6] = all_dat[17+(62*29)];
+                len = 59;
+                do {
+                  myarr[0][index] = all_dat[cell]; //in temp
+                  myarr[1][index] = all_dat[cell + 18]; //out temp
+                  myarr[2][index] = all_dat[cell + 3]; //out hum
+                  myarr[3][index] = all_dat[cell + 21]; //in hum
+                  myarr[4][index] = all_dat[cell + 24]; //pres
+                  myarr[5][index] = all_dat[cell + 6]; //wind
+                  myarr[6][index] = all_dat[cell + 9]; //gust
+                  myarr[7][index] = all_dat[cell + 15]; //rain
+                  index++;
+                  cell += 29;
+                } while (index <= len);
+                m_m_arr[0][0] = all_dat[2 + (61 * 29)]; //out temp
+                m_m_arr[1][0] = all_dat[3 + (61 * 29)];
+                m_m_arr[0][1] = all_dat[20 + (61 * 29)]; //in temp
+                m_m_arr[1][1] = all_dat[21 + (61 * 29)];
+                m_m_arr[0][2] = all_dat[5 + (61 * 29)]; //out hum
+                m_m_arr[1][2] = all_dat[6 + (61 * 29)];
+                m_m_arr[0][3] = all_dat[23 + (61 * 29)]; //in hum
+                m_m_arr[1][3] = all_dat[24 + (61 * 29)];
+                m_m_arr[0][4] = all_dat[26 + (61 * 29)]; //in pes
+                m_m_arr[1][4] = all_dat[27 + (61 * 29)];
+                m_m_arr[0][5] = all_dat[8 + (61 * 29)]; // wind
+                m_m_arr[1][5] = all_dat[12 + (61 * 29)];
+                m_m_arr[0][6] = 0; //not used
+                m_m_arr[1][6] = 0;
+                m_m_arr[0][7] = 0; //rain
+                m_m_arr[1][7] = all_dat[17 + (62 * 29)];
                 break;
               case "day":
                 len = 24;
-                 do {
-                    myarr[0][index] = all_dat[cell];
-                    myarr[1][index] = all_dat[cell + 18];
-                    index++;
-                    cell += 29;
-                  } while (index < len);
+                do {
+                  myarr[0][index] = all_dat[cell];
+                  myarr[1][index] = all_dat[cell + 18];
+                  index++;
+                  cell += 29;
+                } while (index < len);
                 break;
               default:
                 len = 31;
-                 do {
-                    myarr[0][index] = all_dat[cell];
-                    myarr[1][index] = all_dat[cell + 18];
-                    index++;
-                    cell += 29;
-                  } while (index < len);
+                do {
+                  myarr[0][index] = all_dat[cell];
+                  myarr[1][index] = all_dat[cell + 18];
+                  index++;
+                  cell += 29;
+                } while (index < len);
                 break;
             }
             var index = 0;
