--- a/WebPage/Index.html
+++ b/WebPage/Index.html
@@ -156,8 +156,7 @@
     var move_history;
     var active_window = 0;
     var H_offset = 0;
-    var old_H_offset = 0;
-    var myWindow;
+    var WaitDownload;
     var xhr;
     gwd.about = function(event) {
       var x = document.getElementById("cent_c");
@@ -182,14 +181,8 @@
     gwd.history = function(event) {
       // show history
       active_window = 1;
-      message("Getting History Date");
+      WaitDownload();
       sort_update();
-      //     x = document.getElementById("cent_c");
-      //    x.style.display = "none";
-      //    x = document.getElementById("canvas_area_1");
-      //     x.style.display = "block";
-      //     x = document.getElementById("about");
-      //     x.style.display = "none";
     };
     gwd.duration_change = function(event) {
       // update graph
@@ -198,28 +191,22 @@
     };
     gwd.c_b_click = function(event) {
       // click 
-      old_H_offset = H_offset;
       H_offset += 1;
       H_offset = H_offset % 5;
       move_history();
     };
     gwd.c_c_click = function(event) {
-      //click
-      old_H_offset = H_offset;
       H_offset += 2;
       H_offset = H_offset % 5;
       move_history();
     };
     gwd.c_d_click = function(event) {
-      //click
-      old_H_offset = H_offset;
       H_offset += 3;
       H_offset = H_offset % 5;
       move_history();
     };
     gwd.c_e_click = function(event) {
       //click
-      old_H_offset = H_offset;
       H_offset += 4;
       H_offset = H_offset % 5;
       move_history();
@@ -269,6 +256,7 @@
       var c = document.getElementById("canvas");
       var dia = 80;
       var dia_small = 70;
+      var myMsg;
       var chart = [document.getElementById('canvas_a').getContext('2d'),
         document.getElementById('canvas_b').getContext('2d'),
         document.getElementById('canvas_c').getContext('2d'),
@@ -332,7 +320,6 @@
             ident = 11;
             scale = 20;
             start = 860;
-
             text = "Air Pressure ( mb )";
             break;
           case 5:
@@ -368,12 +355,8 @@
           val = (i * scale) + start;
           y2 = y1 + 5 - ((dia + 25) * Math.sin(ang));
           x2 = x1 - ((dia + 25) * Math.cos(ang));
-
-
           win.fillText(val.toString(), x2, y2);
-
         }
-
         win.fillText(text, x1, y1 + 80);
       }
 
@@ -704,7 +687,7 @@
         xhr.send(null);
       }
 
-      function draw_graph(num, range, max, ticks, points, t_index) {
+      function draw_graph(num, range, max, ticks, points, t_index, first) {
         var ctx = chart[num];
         ctx.font = "10px Arial";
         ctx.clearRect(0, 0, 800, 800);
@@ -732,7 +715,7 @@
         var xl = x;
         var xs = w / ticks;
         var c_b = y + h;
-        var i = 0;
+        var i = first;
         ctx.beginPath();
         do {
           ctx.fillText(i, xl, y + h + 10);
@@ -771,11 +754,13 @@
         var max = 1;
         var ticks = 30;
         var points = 60;
+        var first = 1;
         if (data_valid === 1) {
           switch (sel) {
             case "hour":
               ticks = 15;
               points = 60;
+              first = 0;
               break;
             case "day":
               ticks = 23;
@@ -809,13 +794,30 @@
         }
         var plots = 0;
         var range = 0;
-        var d_set = H_offset;
+        var d_set;
+        switch (H_offset) {
+          case 0:
+            d_set = 0;
+            break;
+          case 1:
+            d_set = 2;
+            break;
+          case 2:
+            d_set = 4;
+            break;
+          case 3:
+            d_set = 5;
+            break;
+          case 4:
+            d_set = 7;
+            break;
+        }
         if (data_valid === 0) {
           do {
             min = -1;
             max = 1;
             range = 2
-            draw_graph(plots, range, max, ticks, points, 0);
+            draw_graph(plots, range, max, ticks, points, 0, 0);
             plots++;
           } while (plots < 5);
         } else {
@@ -823,7 +825,7 @@
             min = m_m_arr[0][d_set];
             max = m_m_arr[1][d_set];
             range = Math.ceil((max - min) / 2) * 2;
-            draw_graph(plots, range, max, ticks, points, d_set);
+            draw_graph(plots, range, max, ticks, points, d_set, first);
             temp = new Array();
             temp = myarr[d_set];
             fill_chart(0, plots, temp, range, max, points);
@@ -837,8 +839,7 @@
             if (d_set === 8) d_set = 0;
             plots++;
           } while (plots < 5);
-
-          message.close();
+          myMsg.close();
           var x = document.getElementById("cent_c");
           x.style.display = "none";
           x = document.getElementById("canvas_area_1");
@@ -846,7 +847,6 @@
           x = document.getElementById("about");
           x.style.display = "none";
         }
-
       }
 
       function fill_chart(col, c_num, p_data, range, max, p) {
@@ -863,7 +863,6 @@
         if (col === 1) ctx.strokeStyle = "red";
         if (col === 2) ctx.strokeStyle = "green";
         var y_inc = h / range;
-
         var i = max;
         var s = 0;
         var y1 = 0;
@@ -889,37 +888,6 @@
         ctx.lineTo(xm - 5, hm);
         ctx.fill();
 
-      }
-
-      function clear_chart(c_num, p_data, range, max, p) {
-        var ctx = chart[c_num];
-
-        var x = 60;
-        var y = 30;
-        var w = 340;
-        var h = 100;
-        if (c_num === 0) {
-          w = 740;
-          h = 600;
-        };
-        var y_inc = h / range;
-
-        var i = max;
-        var s = 0;
-        var y1 = 0;
-        var xs = w / p;
-        y1 = y + (y_inc * (i - p_data[0]));
-        ctx.lineWidth = 2;
-        ctx.strokeStyle = "white";
-        ctx.beginPath();
-        ctx.moveTo(x, y1);
-        do {
-          s++;
-          x += xs;
-          y1 = y + (y_inc * (i - p_data[s]));
-          ctx.lineTo(x, y1);
-        } while (s < p);
-        ctx.stroke();
       }
 
 
@@ -1061,88 +1029,96 @@
                 } while (index < len);
                 break;
             }
-
             build_history(1);
           }
         };
         xhr.open("GET", url1);
         xhr.send(null);
       }
-      
-       move_history = function()
-       {
-         var min;
-         var max;
-         var temp;
-         var points;
-        var h_c = H_offset;
-        var o_h_c = old_H_offset;
-         switch (sel) {
-            case "hour":
-              points = 60;
-              break;
-            case "day":
-              points = 23;
-              break;
-            case "Feb":
-              points = 28;
-              break;
-            case "Apr":
-              points = 30;
-              break;
-            case "Jun":
-              points = 30;
-              break;
-            case "Sep":
-              points = 30;
-              break;
-            case "Nov":
-              points = 30;
-              break;
-            default:
-              points = 31;
-              break;
-          }
-         var plots = 0;
-         do{
-            min = m_m_arr[0][o_h_c];
-            max = m_m_arr[1][o_h_c];
-            range = Math.ceil((max - min) / 2) * 2;           
-            temp = new Array();
-            temp = myarr[o_h_c];
-            clear_chart(plots, temp, range, max, points);
-            if ((o_h_c === 0) || (o_h_c === 2) || (o_h_c === 5)) {
-              o_h_c++;
-              min = m_m_arr[0][o_h_c];
-              max = m_m_arr[1][o_h_c];
-              range = Math.ceil((max - min) / 2) * 2;           
-              temp = new Array();
-              temp = myarr[o_h_c];
-              clear_chart(plots, temp, range, max, points);
-            }
-            o_h_c++;
-           if(o_h_c === 8) o_h_c = 0;
+
+      move_history = function() {
+        var min;
+        var max;
+        var temp;
+        var points;
+        var h_c = 0;
+        var first = 1;
+        switch (sel) {
+          case "hour":
+            points = 60;
+            ticks = 15;
+            first = 0;
+            break;
+          case "day":
+            points = 23;
+            ticks = 23;
+            break;
+          case "Feb":
+            points = 28;
+            ticks = 28;
+            break;
+          case "Apr":
+            points = 30;
+            ticks = 30;
+            break;
+          case "Jun":
+            points = 30;
+            ticks = 30;
+            break;
+          case "Sep":
+            points = 30;
+            ticks = 30;
+            break;
+          case "Nov":
+            points = 30;
+            ticks = 30;
+            break;
+          default:
+            points = 31;
+            ticks = 31;
+            break;
+        }
+
+        switch (H_offset) {
+          case 0:
+            h_c = 0;
+            break;
+          case 1:
+            h_c = 2;
+            break;
+          case 2:
+            h_c = 4;
+            break;
+          case 3:
+            h_c = 5;
+            break;
+          case 4:
+            h_c = 7;
+            break;
+        }
+        var plots = 0;
+        do {
+          min = m_m_arr[0][h_c];
+          max = m_m_arr[1][h_c];
+          range = Math.ceil((max - min) / 2) * 2;
+          temp = new Array();
+          temp = myarr[h_c];
+          draw_graph(plots, range, max, ticks, points, h_c, first);
+          fill_chart(0, plots, temp, range, max, points);
+          if ((h_c === 0) || (h_c === 2) || (h_c === 5)) {
+            h_c++;
             min = m_m_arr[0][h_c];
             max = m_m_arr[1][h_c];
-            range = Math.ceil((max - min) / 2) * 2;         
+            range = Math.ceil((max - min) / 2) * 2;
             temp = new Array();
             temp = myarr[h_c];
-            fill_chart(0, plots, temp, range, max, points);
-            if ((h_c === 0) || (h_c === 2) || (h_c === 5)) {
-              o_h_c++;
-              min = m_m_arr[0][h_c];
-              max = m_m_arr[1][h_c];
-              range = Math.ceil((max - min) / 2) * 2;           
-              temp = new Array();
-              temp = myarr[h_c];
-              clear_chart(plots, temp, range, max, points);
-            }
-            h_c++;
-           if(h_c === 8) h_c = 0;
-           plots++;
-         }while(plots<5)
-         
-       }
+            fill_chart(1, plots, temp, range, max, points);
+          }
+          h_c++;
+          if (h_c === 8) h_c = 0;
+          plots++;
+        } while (plots < 5)
+      }
 
 
       sort_update = function() {
@@ -1151,6 +1127,19 @@
         if (active_window == 1) {
           update_history();
         }
+      }
+
+
+
+      WaitDownload = function() {
+        wLeft = window.screenLeft ? window.screenLeft : window.screenX;
+        wTop = window.screenTop ? window.screenTop : window.screenY;
+
+        var left = wLeft + (window.innerWidth / 2) - (100);
+        var top = wTop + (window.innerHeight / 2) - (50);
+
+        myMsg = window.open("", "MsgWindow", 'toolbar=no, personalbar=no, directories=no, status=no, menubar=no, scrollbars=no,                             resizable=no,copyhistory=no, width= 200, height= 100 , top=' + top + ', left=' + left);
+        myMsg.document.write("<h1>Downloading Data</h1>");
       }
 
       function make_array() {
