--- a/WebPage/gwd_preview_Index/index.html
+++ b/WebPage/gwd_preview_Index/index.html
@@ -255,6 +255,7 @@ body {
       var PI = 3.1416;
       var rad = 57.2958;
       var marker = 0;
+      var mark = true;
       var c = document.getElementById("canvas");
       var dia = 80;
       var dia_small = 70;
@@ -750,7 +751,7 @@ body {
         ctx.font = "10px Arial";
       }
 
-      build_history = function(data_valid) {
+      build_history = function(data_valid, len) {
         var temp = new Array();
         var min = 0;
         var max = 1;
@@ -767,30 +768,10 @@ body {
             case "day":
               ticks = 23;
               points = 23;
-              break;
-            case "Feb":
-              ticks = 28;
-              points = 28;
-              break;
-            case "Apr":
-              ticks = 30;
-              points = 30;
-              break;
-            case "Jun":
-              ticks = 30;
-              points = 30;
-              break;
-            case "Sep":
-              ticks = 30;
-              points = 30;
-              break;
-            case "Nov":
-              ticks = 30;
-              points = 30;
-              break;
+              break;            
             default:
-              ticks = 31;
-              points = 31;
+              ticks = len;
+              points = len;
               break;
           }
         }
@@ -826,7 +807,13 @@ body {
           do {
             min = m_m_arr[0][d_set];
             max = m_m_arr[1][d_set];
-            range = Math.ceil((max - min) / 2) * 2;
+            range = max - min;
+            if (plots === 0)
+              if (range > 8) range = Math.ceil(range / 8) * 8;
+              else Math.ceil(range / 4) * 4;
+            else
+            if (range > 4) range = Math.ceil(range / 4) * 4;
+            else Math.ceil(range / 2) * 2;
             draw_graph(plots, range, max, ticks, points, d_set, first);
             temp = new Array();
             temp = myarr[d_set];
@@ -879,16 +866,21 @@ body {
           s++;
           x += xs;
           y1 = y + (y_inc * (i - p_data[s]));
-          ctx.lineTo(x, y1);
+          if(y1 > (y+h))
+            ctx.moveTo(x, y1);
+          else
+            ctx.lineTo(x, y1);
         } while (s < p);
         ctx.stroke();
-        ctx.beginPath();
-        ctx.fillStyle = "black";
-        ctx.moveTo(xm - 5, hm);
-        ctx.lineTo(xm, hm - 5);
-        ctx.lineTo(xm + 5, hm);
-        ctx.lineTo(xm - 5, hm);
-        ctx.fill();
+        if(mark){
+          ctx.beginPath();
+          ctx.fillStyle = "black";
+          ctx.moveTo(xm - 5, hm);
+          ctx.lineTo(xm, hm - 5);
+          ctx.lineTo(xm + 5, hm);
+          ctx.lineTo(xm - 5, hm);
+         ctx.fill();
+        }
 
       }
 
@@ -906,6 +898,7 @@ body {
             var cell = 2;
             switch (sel) {
               case "hour":
+                mark = true;
                 len = 59;
                 do {
                   myarr[0][index] = all_dat[cell]; //in temp
@@ -964,7 +957,8 @@ body {
                 m_m_arr[1][7] = Math.ceil(all_dat[17 + (62 * 29)] / 15) + 1;
                 break;
               case "day":
-                len = 24;
+                mark = true;
+                 len = 24;
                 do {
                   myarr[0][index] = all_dat[cell]; //in temp
                   myarr[1][index] = all_dat[cell + 18]; //out temp
@@ -991,15 +985,15 @@ body {
                 m_m_arr[0][1] = m_m_arr[0][0];
                 m_m_arr[1][1] = m_m_arr[1][0];
 
-                if (parseFloat(all_dat[5 + (27 * 29)]) < parseFloat(all_dat[20 + (27 * 29)])) //hum low
+                if (parseFloat(all_dat[5 + (27 * 29)]) < parseFloat(all_dat[22 + (27 * 29)])) //hum low
                   m_m_arr[0][2] = Math.floor(all_dat[5 + (27 * 29)]) - 1;
                 else
-                  m_m_arr[0][2] = Math.floor(all_dat[20 + (27 * 29)]) - 1;
+                  m_m_arr[0][2] = Math.floor(all_dat[22 + (27 * 29)]) - 1;
 
-                if (parseFloat(all_dat[6 + (27 * 29)]) > parseFloat(all_dat[24 + (27 * 29)])) //hum high
+                if (parseFloat(all_dat[6 + (27 * 29)]) > parseFloat(all_dat[23 + (27 * 29)])) //hum high
                   m_m_arr[1][2] = Math.ceil(all_dat[6 + (27 * 29)]) + 1;
                 else
-                  m_m_arr[1][2] = Math.ceil(all_dat[24 + (27 * 29)]) + 1;
+                  m_m_arr[1][2] = Math.ceil(all_dat[23 + (27 * 29)]) + 1;
 
                 m_m_arr[0][3] = m_m_arr[0][2];
                 m_m_arr[1][3] = m_m_arr[1][2];
@@ -1021,17 +1015,74 @@ body {
                 m_m_arr[0][7] = 0; //rain
                 m_m_arr[1][7] = Math.ceil(all_dat[17 + (28 * 29)] / 15) + 1;
                 break;
-              default:
-                len = 31;
+              default: 
+                mark = false;
+                var d = new Date();
+                m = parseInt(d.getMonth());
+                var sm = parseInt(document.getElementById("duration").selectedIndex) -2;
+                if(sm === m)         
+                len = parseInt(d.getDate());
+                else{
+                  if((sm === 3)||(sm === 5)||(sm === 8)||(sm === 10))  len = 29; else len = 30;
+                  if(sm === 1) if(d.getFullYear()%4 === 0) len = 28; else len = 27; 
+                }
                 do {
-                  myarr[0][index] = all_dat[cell];
-                  myarr[1][index] = all_dat[cell + 18];
+                  myarr[0][index] = all_dat[cell]; //in temp
+                  myarr[1][index] = all_dat[cell + 18]; //out temp
+                  myarr[2][index] = all_dat[cell + 3]; //out hum
+                  myarr[3][index] = all_dat[cell + 21]; //in hum
+                  myarr[4][index] = all_dat[cell + 24]; //pres
+                  myarr[5][index] = all_dat[cell + 6]; //wind
+                  myarr[6][index] = all_dat[cell + 9]; //gust
+                  myarr[7][index] = all_dat[cell + 15] / 15; //rain
                   index++;
                   cell += 29;
-                } while (index < len);
+                } while (index <= len);
+                if (parseFloat(all_dat[2 + (33 * 29)]) < parseFloat(all_dat[20 + (33 * 29)])) //temp low
+                  m_m_arr[0][0] = Math.floor(all_dat[2 + (33 * 29)]) - 1;
+                else
+                  m_m_arr[0][0] = Math.floor(all_dat[20 + (33 * 29)]) - 1;
+
+                if (parseFloat(all_dat[3 + (33 * 29)]) > parseFloat(all_dat[21 + (33 * 29)])) //temp high
+                  m_m_arr[1][0] = Math.ceil(all_dat[3 + (33 * 29)]) + 1;
+                else
+                  m_m_arr[1][0] = Math.ceil(all_dat[21 + (33 * 29)]) + 1;
+
+                m_m_arr[0][1] = m_m_arr[0][0];
+                m_m_arr[1][1] = m_m_arr[1][0];
+
+                if (parseFloat(all_dat[5 + (33 * 29)]) < parseFloat(all_dat[22 + (33 * 29)])) //hum low
+                  m_m_arr[0][2] = Math.floor(all_dat[5 + (33 * 29)]) - 1;
+                else
+                  m_m_arr[0][2] = Math.floor(all_dat[22 + (33 * 29)]) - 1;
+
+                if (parseFloat(all_dat[6 + (33 * 29)]) > parseFloat(all_dat[23 + (33 * 29)])) //hum high
+                  m_m_arr[1][2] = Math.ceil(all_dat[6 + (33 * 29)]) + 1;
+                else
+                  m_m_arr[1][2] = Math.ceil(all_dat[23 + (33 * 29)]) + 1;
+
+                m_m_arr[0][3] = m_m_arr[0][2];
+                m_m_arr[1][3] = m_m_arr[1][2];
+
+                m_m_arr[0][4] = Math.floor(all_dat[26 + (33 * 29)]) - 1; // pes low
+                m_m_arr[1][4] = Math.ceil(all_dat[27 + (33 * 29)]) + 1; // pres high                
+
+                m_m_arr[0][5] = 0; //wind low
+
+                if (parseFloat(all_dat[12 + (33 * 29)]) > parseFloat(all_dat[15 + (33 * 29)])) //wind high
+                  m_m_arr[1][5] = Math.ceil(all_dat[12 + (33 * 29)]) + 1;
+                else
+                  m_m_arr[1][5] = Math.ceil(all_dat[15 + (33 * 29)]) + 1;
+                if (m_m_arr[1][5] < 2) m_m_arr[1][5] = 2;
+
+                m_m_arr[0][6] = m_m_arr[0][5];
+                m_m_arr[1][6] = m_m_arr[1][5];
+
+                m_m_arr[0][7] = 0; //rain
+                m_m_arr[1][7] = Math.ceil(all_dat[17 + (34 * 29)] / 15) + 1;
                 break;
             }
-            build_history(1);
+            build_history(1,len);
           }
         };
         xhr.open("GET", url1);
@@ -1045,6 +1096,7 @@ body {
         var points;
         var h_c = 0;
         var first = 1;
+        var len;
         switch (sel) {
           case "hour":
             points = 60;
@@ -1055,29 +1107,9 @@ body {
             points = 23;
             ticks = 23;
             break;
-          case "Feb":
-            points = 28;
-            ticks = 28;
-            break;
-          case "Apr":
-            points = 30;
-            ticks = 30;
-            break;
-          case "Jun":
-            points = 30;
-            ticks = 30;
-            break;
-          case "Sep":
-            points = 30;
-            ticks = 30;
-            break;
-          case "Nov":
-            points = 30;
-            ticks = 30;
-            break;
           default:
-            points = 31;
-            ticks = 31;
+            points = len;
+            ticks = len;
             break;
         }
 
@@ -1102,7 +1134,13 @@ body {
         do {
           min = m_m_arr[0][h_c];
           max = m_m_arr[1][h_c];
-          range = Math.ceil((max - min) / 2) * 2;
+          range = max - min;
+          if (plots === 0)
+            if (range > 8) range = Math.ceil(range / 8) * 8;
+            else Math.ceil(range / 4) * 4;
+          else
+          if (range > 4) range = Math.ceil(range / 4) * 4;
+          else Math.ceil(range / 2) * 2;
           temp = new Array();
           temp = myarr[h_c];
           draw_graph(plots, range, max, ticks, points, h_c, first);
@@ -1111,7 +1149,13 @@ body {
             h_c++;
             min = m_m_arr[0][h_c];
             max = m_m_arr[1][h_c];
-            range = Math.ceil((max - min) / 2) * 2;
+            range = max - min;
+            if (plots === 0)
+              if (range > 8) range = Math.ceil(range / 8) * 8;
+              else Math.ceil(range / 4) * 4;
+            else
+            if (range > 4) range = Math.ceil(range / 4) * 4;
+            else Math.ceil(range / 2) * 2;
             temp = new Array();
             temp = myarr[h_c];
             fill_chart(1, plots, temp, range, max, points);
@@ -1185,6 +1229,16 @@ body {
             <option value="day">Day</option>
             <option value="Jan">January</option>
             <option value="Feb">Febuary</option>
+            <option value="Mar">March</option>
+            <option value="Apr">April</option>
+            <option value="May">May</option>
+            <option value="Jun">June</option>
+            <option value="Jul">July</option>
+            <option value="Aug">August</option>
+            <option value="Sep">September</option>
+            <option value="Oct">October</option>
+            <option value="Nov">November</option>
+            <option value="Dec">December</option>
           </select>
         </div>
         <div class="column">
