--- a/WebPage/Index.html
+++ b/WebPage/Index.html
@@ -258,6 +258,7 @@
       var dia = 80;
       var dia_small = 70;
       var myMsg;
+      var m_len = 30;
       var chart = [document.getElementById('canvas_a').getContext('2d'),
         document.getElementById('canvas_b').getContext('2d'),
         document.getElementById('canvas_c').getContext('2d'),
@@ -707,6 +708,7 @@
           y_inc = range / 8;
           ys = h / 8;
         };
+        ctx.beginPath();
         ctx.lineWidth = 1;
         ctx.strokeStyle = "grey";
         ctx.rect(x, y, w, h);
@@ -766,7 +768,7 @@
             case "day":
               ticks = 23;
               points = 23;
-              break;            
+              break;
             default:
               ticks = len;
               points = len;
@@ -864,20 +866,20 @@
           s++;
           x += xs;
           y1 = y + (y_inc * (i - p_data[s]));
-          if(y1 > (y+h))
-            ctx.moveTo(x, y1);
+          if (y1 > (y + h))
+            ctx.moveTo(x, y + h);
           else
             ctx.lineTo(x, y1);
         } while (s < p);
         ctx.stroke();
-        if(mark){
+        if (mark) {
           ctx.beginPath();
           ctx.fillStyle = "black";
           ctx.moveTo(xm - 5, hm);
           ctx.lineTo(xm, hm - 5);
           ctx.lineTo(xm + 5, hm);
           ctx.lineTo(xm - 5, hm);
-         ctx.fill();
+          ctx.fill();
         }
 
       }
@@ -946,6 +948,7 @@
                   m_m_arr[1][5] = Math.ceil(all_dat[12 + (61 * 29)]) + 1;
                 else
                   m_m_arr[1][5] = Math.ceil(all_dat[15 + (61 * 29)]) + 1;
+                
                 if (m_m_arr[1][5] < 2) m_m_arr[1][5] = 2;
 
                 m_m_arr[0][6] = m_m_arr[0][5];
@@ -956,7 +959,7 @@
                 break;
               case "day":
                 mark = true;
-                 len = 24;
+                len = 24;
                 do {
                   myarr[0][index] = all_dat[cell]; //in temp
                   myarr[1][index] = all_dat[cell + 18]; //out temp
@@ -1013,16 +1016,19 @@
                 m_m_arr[0][7] = 0; //rain
                 m_m_arr[1][7] = Math.ceil(all_dat[17 + (28 * 29)] / 15) + 1;
                 break;
-              default: 
+              default:
                 mark = false;
                 var d = new Date();
                 m = parseInt(d.getMonth());
-                var sm = parseInt(document.getElementById("duration").selectedIndex) -2;
-                if(sm === m)         
-                len = parseInt(d.getDate());
-                else{
-                  if((sm === 3)||(sm === 5)||(sm === 8)||(sm === 10))  len = 29; else len = 30;
-                  if(sm === 1) if(d.getFullYear()%4 === 0) len = 28; else len = 27; 
+                var sm = parseInt(document.getElementById("duration").selectedIndex) - 2;
+                if (sm === m)
+                  len = parseInt(d.getDate()) - 1;
+                else {
+                  if ((sm === 3) || (sm === 5) || (sm === 8) || (sm === 10)) len = 29;
+                  else len = 30;
+                  if (sm === 1)
+                    if (d.getFullYear() % 4 === 0) len = 28;
+                    else len = 27;
                 }
                 do {
                   myarr[0][index] = all_dat[cell]; //in temp
@@ -1032,7 +1038,7 @@
                   myarr[4][index] = all_dat[cell + 24]; //pres
                   myarr[5][index] = all_dat[cell + 6]; //wind
                   myarr[6][index] = all_dat[cell + 9]; //gust
-                  myarr[7][index] = all_dat[cell + 15] / 15; //rain
+                  myarr[7][index] = all_dat[cell + 16] / 15; //rain
                   index++;
                   cell += 29;
                 } while (index <= len);
@@ -1077,10 +1083,11 @@
                 m_m_arr[1][6] = m_m_arr[1][5];
 
                 m_m_arr[0][7] = 0; //rain
-                m_m_arr[1][7] = Math.ceil(all_dat[17 + (34 * 29)] / 15) + 1;
+                m_m_arr[1][7] = Math.ceil(all_dat[18 + (33 * 29)] / 15) + 1;
+                m_len = len;
                 break;
             }
-            build_history(1,len);
+            build_history(1, len);
           }
         };
         xhr.open("GET", url1);
@@ -1093,21 +1100,20 @@
         var temp;
         var points;
         var h_c = 0;
-        var first = 1;
-        var len;
+        var first = 0;
         switch (sel) {
           case "hour":
             points = 60;
             ticks = 15;
-            first = 0;
+            first = 1;
             break;
           case "day":
             points = 23;
             ticks = 23;
             break;
           default:
-            points = len;
-            ticks = len;
+            points = m_len;
+            ticks = m_len;
             break;
         }
 
@@ -1135,25 +1141,25 @@
           range = max - min;
           if (plots === 0)
             if (range > 8) range = Math.ceil(range / 8) * 8;
-            else Math.ceil(range / 4) * 4;
+            else range = Math.ceil(range / 4) * 4;
           else
           if (range > 4) range = Math.ceil(range / 4) * 4;
-          else Math.ceil(range / 2) * 2;
+          else range = Math.ceil(range / 2) * 2;
           temp = new Array();
           temp = myarr[h_c];
           draw_graph(plots, range, max, ticks, points, h_c, first);
           fill_chart(0, plots, temp, range, max, points);
           if ((h_c === 0) || (h_c === 2) || (h_c === 5)) {
             h_c++;
-            min = m_m_arr[0][h_c];
-            max = m_m_arr[1][h_c];
-            range = max - min;
-            if (plots === 0)
-              if (range > 8) range = Math.ceil(range / 8) * 8;
-              else Math.ceil(range / 4) * 4;
-            else
-            if (range > 4) range = Math.ceil(range / 4) * 4;
-            else Math.ceil(range / 2) * 2;
+    //        min = m_m_arr[0][h_c];
+    //        max = m_m_arr[1][h_c];
+    //        range = max - min;
+    //        if (plots === 0)
+    //          if (range > 8) range = Math.ceil(range / 8) * 8;
+    //          else range = Math.ceil(range / 4) * 4;
+    //        else
+    //        if (range > 4) range = Math.ceil(range / 4) * 4;
+    //        else range = Math.ceil(range / 2) * 2;
             temp = new Array();
             temp = myarr[h_c];
             fill_chart(1, plots, temp, range, max, points);
